initial commit for kurtobando.com

--- a/src/index.html
+++ b/src/index.html
@@ -2,39 +2,98 @@
 <html lang="en">
 <head>
 	<!-- Regular Meta Info - used by search engines and browsers -->
-	<title>{{pageTitle}}</title>
-   	<meta charset="utf-8"><!-- html5 version of http-equiv="Content-Type"... -->
-  	<meta name="description" content="{{description}}">
-  	<meta name="keywords" content="{{keywords}}">
-  	<link rel="author" href="https://plus.google.com/{{googlePlusId}}" />
-  	<link rel="canonical" href="{{pageUrl}}" />
-	<link rel='icon' href='{{}}' type='image/x-icon'/ >
-
+	<title>Hello, I am Kurt!</title>
+	<meta charset="utf-8"><!-- html5 version of http-equiv="Content-Type"... -->
+	<meta name="description" content="Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph">
+	<meta name="keywords" content="kurt obando, portfolio">
+	<link rel="author" href="https://plus.google.com/u/0/114919468176469695769" />
+	<link rel="canonical" href="https://plus.google.com/u/0/114919468176469695769" />
+	<link rel='icon' href='images/favicon.ico' type='image/x-icon'/ >
 
 	<!-- Facebook Meta Info - used by Facebook when someone shares your url -->
-	<meta property="og:url" content="{{pageUrl}}">
-	<meta property="og:image" content="{{imageUrl}}">
-	<meta property="og:description" content="{{description}}">
-	<meta property="og:title" content="{{pageTitle}}">
-	<meta property="og:site_name" content="{{siteTitle}}">
-	<meta property="og:see_also" content="{{homepageUrl}}">
+	<meta property="og:url" content="https://kurtobando.com/">
+	<meta property="og:image" content="images/portfolio-preview.jpg">
+	<meta property="og:description" content="Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph">
+	<meta property="og:title" content="Hello, I am Kurt!">
+	<meta property="og:site_name" content="Hello, I am Kurt!">
+	<meta property="og:see_also" content="https://kurtobando.com/">
 
 	<!-- Google+ Meta Info - used by Google+ when someone shares your url -->
-	<meta itemprop="name" content="{{pageTitle}}">
-	<meta itemprop="description" content="{{description}}">
-	<meta itemprop="image" content="{{imageUrl}}">
+	<meta itemprop="name" content="Hello, I am Kurt!">
+	<meta itemprop="description" content="Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph">
+	<meta itemprop="image" content="images/portfolio-preview.jpg">
 
 	<!-- Twitter Meta Info - used by Twitter when someone shares your url -->
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:url" content="{{pageUrl}}">
-	<meta name="twitter:title" content="{{pageTitle}}">
-	<meta name="twitter:description" content="{{description}}">
-	<meta name="twitter:image" content="{{imageUrl}}">
+	<meta name="twitter:card" content="an aspiring cinematographer and front-end developer, founder of cityescape.ph">
+	<meta name="twitter:url" content="images/portfolio-preview.jpg">
+	<meta name="twitter:title" content="Hello, I am Kurt!">
+	<meta name="twitter:description" content="Hi, my name is Kurt, an aspiring cinematographer and front-end developer, founder of cityescape.ph">
+	<meta name="twitter:image" content="images/portfolio-preview.jpg">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  	<link rel="stylesheet" href="css/styles.css">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  	<link href="css/style.css" rel="stylesheet" >
 </head>
 <body>
-  <script src="js/scripts.js"></script>
+	<div id="about" class="uk-cover-background uk-height-viewport">
+		<div class="uk-container uk-container-center uk-height-viewport">
+			<ul id="menus">
+				<li><a class="active" href="#about">about</a></li>
+				<li><a href="#work">work</a></li>
+			</ul>
+			<div id="my-details">
+				<div id="my-name-is-kurt">
+					<h1>Hi, my name is Kurt.</h1>
+					<p>an aspiring cinematographer and front-end developer, founder of <a href="https://cityescape.ph">cityescape.ph</a> </p>
+				</div>
+				<ul id="my-social-media">
+					<li><a href="http://bit.ly/2K91uYE" class="uk-icon-small uk-icon-facebook-official"></a></li>
+					<li><a href="http://bit.ly/2tt2TyO" class="uk-icon-small uk-icon-instagram"></a></li>
+					<li><a href="http://bit.ly/2Ltb7NZ" class="uk-icon-small uk-icon-youtube-play"></a></li>
+					<li><a href="http://bit.ly/2Io2Kl5" class="uk-icon-small uk-icon-github"></a></li>
+				</ul>
+				<!-- <div id="my-description">
+					I have a fulltime job working at BPO industry for about 3 years now, ranging in technical and customer care support.
+					During my free time, I still continue building my web development skills and creating mobile cinematic shots.
+				</div> -->
+			</div>
+		</div>
+	</div>
+	<div id="work" class="uk-container-center">
+		<div class="">
+			<div class="uk-cover uk-width-small-1-1 uk-width-large-1-2">
+				<iframe data-uk-cover class="uk-responsive-width" width="954" height="580" src="https://www.youtube.com/embed/8C_Pnj3w82A?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div id="video-description" class="uk-width-small-1-1 uk-width-large-1-2 uk-vertical-align">
+			    <div class="uk-vertical-align-middle">
+					<h2>Taken by Huawei p10 + Smooth Q</h2>
+	   				<p>inpired by <a href="https://www.youtube.com/channel/UCKy98Gb2j1C1GPiCCIjYwoA">@1minutewithme</a></p>
+			    </div>
+			</div>
+		</div>
+		<div class="">
+			<div class="uk-cover uk-width-small-1-1 uk-width-large-1-2">
+				<iframe data-uk-cover class="uk-responsive-width" width="954" height="580" src="https://www.youtube.com/embed/9_8uFrybTwQ?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+			<div class="uk-cover uk-width-small-1-1 uk-width-large-1-2">
+				<iframe data-uk-cover class="uk-responsive-width" width="954" height="580" src="https://www.youtube.com/embed/IormRhp5f0Q?ecver=1" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+			</div>
+		</div>
+	</div>
+	<div id="contact">
+		<div class="uk-container uk-container-center uk-text-center uk-vertical-align">
+			<div class="uk-vertical-align-middle">
+				<h2>Do you see potential on my works?</h2>
+				<p>Let me know at me@kurtobando.com</p>
+
+				<ul id="my-social-media" class="uk-display-block">
+					<li><a href="http://bit.ly/2K91uYE" class="uk-icon-small uk-icon-facebook-official"></a></li>
+					<li><a href="http://bit.ly/2tt2TyO" class="uk-icon-small uk-icon-instagram"></a></li>
+					<li><a href="http://bit.ly/2Ltb7NZ" class="uk-icon-small uk-icon-youtube-play"></a></li>
+					<li><a href="http://bit.ly/2Io2Kl5" class="uk-icon-small uk-icon-github"></a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+  <script src="js/script.js"></script>
 </body>
 </html>
