--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
 	<meta name="twitter:image" content="{{imageUrl}}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  	<link rel="stylesheet" href="css/styles.css">
+  	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <script src="js/scripts.js"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
