updated favicon to .png since .ico was not move to dist

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="kurt obando, portfolio">
 	<link rel="author" href="https://plus.google.com/u/0/114919468176469695769" />
 	<link rel="canonical" href="https://plus.google.com/u/0/114919468176469695769" />
-	<link rel="icon" href="images/favicon.ico" type="image/x-icon"/>
+	<link rel="icon" href="images/favicon-16x16.png" type="image/x-icon"/>
 
 	<!-- Facebook Meta Info - used by Facebook when someone shares your url -->
 	<meta property="og:url" content="https://kurtobando.com/">
