added Google Analytics

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,16 @@
 
   	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   	<link href="css/style.min.css" rel="stylesheet" >
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-121702615-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-121702615-1');
+	</script>
 </head>
 <body>
 	<div id="about" class="uk-cover-background uk-height-viewport">
